--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @category.name %></h1>
 
-<select id="product_filter_order" class="form-control" style="margin-bottom: 10px; width: 102%;">
+<select id="product_filter_order" class="form-control" style="margin-bottom: 10px;">
   <option value="views asc">  по популярности </option>
   <option value="price asc">  от дешевых к дорогим </option>
   <option value="price desc">  от дорогих к дешевым </option>
