--- a/app/views/admin/products/_form.html.erb
+++ b/app/views/admin/products/_form.html.erb
@@ -11,47 +11,51 @@
     </div>
   <% end %>
 
-  <div>
+<div class="row">
+  <div class="col-2">
     <%= form.label :attachments %>
     <%= form.file_field :attachments, multiple: true %>
   </div>
 
-  <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+  <div class="col">
+    <div class="field">
+      <%= form.label :name %>
+      <%= form.text_field :name %>
+    </div>
+
+    <div class="field">
+      <%= form.label :summary %>
+      <%= form.text_field :summary %>
+    </div>
+
+    <div class="field">
+      <%= form.label :discription %>
+      <%= form.text_field :discription %>
+    </div>
+
+    <div class="field">
+      <%= form.label :price %>
+      <%= form.number_field :price %>
+    </div>
+
+    <div class="field">
+      <%= form.label :quantity %>
+      <%= form.number_field :quantity %>
+    </div>
+
+    <div class="field">
+      <%= form.label :display %>
+      <%= form.check_box :display %>
+    </div>
+
+    <div class="field">
+      <%= form.label :category_id %>
+      <%= form.collection_select :category_id, Category.all, :id, :name %>
+    </div>
   </div>
 
-  <div class="field">
-    <%= form.label :summary %>
-    <%= form.text_field :summary %>
-  </div>
-
-  <div class="field">
-    <%= form.label :discription %>
-    <%= form.text_field :discription %>
-  </div>
-
-  <div class="field">
-    <%= form.label :price %>
-    <%= form.number_field :price %>
-  </div>
-
-  <div class="field">
-    <%= form.label :quantity %>
-    <%= form.number_field :quantity %>
-  </div>
-
-  <div class="field">
-    <%= form.label :display %>
-    <%= form.check_box :display %>
-  </div>
-
-  <div class="field">
-    <%= form.label :category_id %>
-    <%= form.collection_select :category_id, Category.all, :id, :name %>
-  </div>
-
-  <div class="actions">
+  <div class="col-2 actions">
     <%= form.submit %>
   </div>
+</div>
 <% end %>
