--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,5 +1,3 @@
-<h1>Editing Product</h1>
+<h1>Редактирование товара</h1>
 
 <%= render 'edit_form', product: @product %>
-
-<%= link_to 'Back', admin_products_path %>
