--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,49 +1,52 @@
 <h1>Products</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Image</th>
-      <th>Index</th>
-      <th>Category</th>
-      <th>Name</th>
-      <th>Quantity</th>
-      <th>Display</th>
-      <th>Price</th>
-      <th>Actions</th>
-    </tr>
-  </thead>
+<div class="row">
+  <div class="col-10">
+    <table>
+      <thead>
+        <tr>
+          <th>Image</th>
+          <th>Index</th>
+          <th>Category</th>
+          <th>Name</th>
+          <th>Quantity</th>
+          <th>Display</th>
+          <th>Price</th>
+          <th>Actions</th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <% @products.each do |product| %>
-      <tr>
-        <td>
-          <% if product.attachments? %>
-            <%= image_tag(product.attachments.first.index_admin_thumb.url, alt: 'Image') %>
-          <% end %>
-        </td>
-        <td><%= product.id %></td>
-        <td><%= product.category.name %></td>
-        <td>
-          <ul>
-            <li><%= link_to product.name, edit_admin_product_path(product) %></li>
-            <li><%= product.summary %></li>
-          </ul>
-        </td>
-        <td><%= product.quantity %></td>
-        <td><%= product.display %></td>
-        <td><%= product.price %></td>
-        <td>
-          <ul>
-            <li><%= link_to 'Edit', edit_admin_product_path(product) %></li>
-            <li><%= link_to 'Destroy', admin_product_path(product), method: :delete, data: { confirm: 'Are you sure?' } %></li>
-          </ul>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Product', new_admin_product_path %>
+      <tbody>
+        <% @products.each do |product| %>
+          <tr>
+            <td>
+              <% if product.attachments? %>
+                <%= image_tag(product.attachments.first.index_admin_thumb.url, alt: 'Image') %>
+              <% end %>
+            </td>
+            <td><%= product.id %></td>
+            <td><%= product.category.name %></td>
+            <td>
+              <ul>
+                <li><%= link_to product.name, edit_admin_product_path(product) %></li>
+                <li><%= product.summary %></li>
+              </ul>
+            </td>
+            <td><%= product.quantity %></td>
+            <td><%= product.display %></td>
+            <td><%= product.price %></td>
+            <td>
+              <ul>
+                <li><%= link_to 'Edit', edit_admin_product_path(product) %></li>
+                <li><%= link_to 'Destroy', admin_product_path(product), method: :delete, data: { confirm: 'Are you sure?' } %></li>
+              </ul>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <div class="col-2">
+    <%= link_to 'New Product', new_admin_product_path %>
+  </div>
+</div>
