--- a/app/views/admin/properties/edit.html.erb
+++ b/app/views/admin/properties/edit.html.erb
@@ -1,5 +1,5 @@
-<h1>Editing Property</h1>
+<h1>Редактирование характеристики</h1>
 
 <%= render 'form', property: @property %>
 
-<%= link_to 'Back', admin_properties_path %>
+<%= link_to 'Назад', admin_properties_path %>
