--- a/app/views/admin/properties/index.html.erb
+++ b/app/views/admin/properties/index.html.erb
@@ -1,20 +1,39 @@
-<h1>Properties</h1>
+<h1>Характеристики</h1>
 
-<ul>
-  <% @properties.roots.order(:position).each do |property| %>
-    <li>
-      <%= property.position %> <%= link_to property.name, edit_admin_property_path(property) %>
-      (<%= link_to 'Destroy', admin_property_path(property), method: :delete, data: { confirm: 'Are you sure?' } %>)
-    </li>
-    <ul>
-      <% property.children.each do |child| %>
-        <li>
-          <%= child.position %> <%= link_to child.name, edit_admin_property_path(child) %>
-          (<%= link_to 'Destroy', admin_property_path(child), method: :delete, data: { confirm: 'Are you sure?' } %>)
-        </li>
-      <% end %>
-    </ul>
-  <% end %>
-</ul>
+<div class="row">
+  <div class="col-9">
+    <% @properties.roots.order(:position).each do |property| %>
+      <div class="accordion" id="accordionExample">
+        <div class="card">
+          <div class="card-header" id="heading_<%= property.id %>">
+            <div class="row justify-content-between">
+              <div class="col-auto">
+                <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapse_<%= property.id %>" aria-expanded="true" aria-controls="collapseOne">
+                  <i class="fas fa-caret-down"></i>
+                </button>
+                <%= link_to property.name, edit_admin_property_path(property) %>
+              </div>
+              <div class="col-auto">
+                (<%= link_to 'Destroy', admin_property_path(property), method: :delete, data: { confirm: 'Are you sure?' } %>)
+              </div>
+            </div>
+          </div>
 
-<%= link_to 'New Property', new_admin_property_path %>
+          <div id="collapse_<%= property.id %>" class="collapse" aria-labelledby="heading_<%= property.id %>" data-parent="#accordionExample">
+            <div class="card-body">
+                <% property.children.each do |child| %>
+                  <li>
+                    <%= link_to child.name, edit_admin_property_path(child) %>
+                    (<%= link_to 'Destroy', admin_property_path(child), method: :delete, data: { confirm: 'Are you sure?' } %>)
+                  </li>
+                <% end %>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+  <div class="col-3">
+    <%= link_to '+ Добавить хар-ку', new_admin_property_path %>
+  </div>
+</div>
