--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,33 +1,33 @@
 <h1>База клиентов</h1>
 
-<div class="col-7">
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">mail</th>
-        <th scope="col">phone</th>
-        <th scope="col">status</th>
-        <th scope="col">получает рассылку?</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @users.each do |user| %>
+<div class="row">
+  <div class="col-9">
+    <table class="table table-hover">
+      <thead>
         <tr>
-          <th scope="row"><%= user.id %></th>
-          <td><%= user.first_name %></td>
-          <td><%= user.last_name %></td>
-          <td><%= user.email %></td>
-          <td><%= user.phone %></td>
-          <th>Еще не введено</th>
-          <th>Еще не введено</th>
+          <th scope="col">#</th>
+          <th scope="col">Имя</th>
+          <th scope="col">e-mail</th>
+          <th scope="col">Телефон</th>
+          <th scope="col">Статус</th>
+          <th scope="col">Получает рассылку?</th>
         </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
-<div class="col-3">
-
+      </thead>
+      <tbody>
+        <% @users.each do |user| %>
+          <tr>
+            <th scope="row"><%= user.id %></th>
+            <td><%= user.full_name %></td>
+            <td><%= user.email %></td>
+            <td><%= user.phone %></td>
+            <th>Еще не введено</th>
+            <th>Еще не введено</th>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+  <div class="col-3 text-right">
+    Поиск
+  </div>
 </div>
