--- a/app/views/patrials/_side_bar.html.erb
+++ b/app/views/patrials/_side_bar.html.erb
@@ -1,4 +1,5 @@
 <style media="screen">
+
   .card {
     margin-bottom: 10px;
   }
@@ -8,11 +9,10 @@
     text-align: center;
     color: yellow;
     background-color: #007bff;
-    /* font-family: 'Russo One', sans-serif; */
   }
 
   .card-body {
-    font-size: 0.76rem;
+    font-size: 0.73rem;
     padding: 0.25rem 1.25rem;
   }
   .card-text {
@@ -64,7 +64,7 @@
     </p>
     <p class="card-text">
       <i class="fas fa-envelope"></i>
-      <a href="mailto:angarkharkiv@gmail.com" class="card-text">angarkharkiv.kh.ua</a>
+      <a href="mailto:angarkharkiv@gmail.com">angarkharkiv.kh.ua</a>
     </p>
   </div>
 </div>
