--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,9 @@
+<style media="screen">
+  .breadcrumb-item {
+    font-size: 0.6rem;
+  }
+</style>
+
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb" style="margin-bottom: 0.5rem">
     <li class="breadcrumb-item"><a href="/">Главная</a></li>
@@ -5,6 +11,11 @@
     <li class="breadcrumb-item active" aria-current="page"><%= @product.name %></li>
   </ol>
 </nav>
+
+<h1>
+  <div><%= @product.name %></div>
+  <div style="font-size: 15px"><%= @product.summary %></div>
+</h1>
 
 <ul class="discription-navbar nav nav-tabs" id="myTab" role="tablist" style="padding-top: 10px;">
   <li class="nav-item text-center" style="width: 25%;">
@@ -14,7 +25,7 @@
     <a class="nav-link" id="profile-tab" data-toggle="tab" href="#specifications" role="tab" aria-controls="specifications" aria-selected="false">Технические характеристики</a>
   </li>
   <li class="nav-item text-center" style="width: 25%;">
-    <a class="nav-link" id="contact-tab" data-toggle="tab" href="#comments" role="tab" aria-controls="comments" aria-selected="false">Комментарии</a>
+    <a class="nav-link" id="contact-tab" data-toggle="tab" href="#comments" role="tab" aria-controls="comments" aria-selected="false">Комментарии (<%= @product.product_comments.count %>)</a>
   </li>
 </ul>
 <div class="row">
@@ -49,29 +60,58 @@
           <% end %>
         </ul>
       </div>
-      <div class="tab-pane fade aaa" id="comments" role="tabpanel" aria-labelledby="contact-tab">
+      <div class="tab-pane fade" id="comments" role="tabpanel" aria-labelledby="contact-tab">
         <h2>Комментарии:</h2>
+        <% @product.product_comments.each do |comment| %>
+          <div class="card">
+            <div class="card-header">
+              <div class="row justify-content-between">
+                <div class="col-6 text-left">
+                  <%= comment.user.first_name %> <%= comment.user.last_name %>
+                </div>
+                <div class="col-6 text-right">
+                  <a href="<%= product_like_comment_path(comment_id: comment.id, product_id: @product.id) %>" style="color: yellow" data-remote="true">
+                    <i class="fas fa-thumbs-up"></i>
+                  </a>
+                  <span id="like_<%= comment.id %>"><%= comment.like %></span>
+                  <a href="<%= product_dislike_comment_path(comment_id: comment.id, product_id: @product.id) %>" style="color: yellow" data-remote="true">
+                    <i class="fas fa-thumbs-down"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item"><%= comment.comment %></li>
+            </ul>
+          </div>
+        <% end %>
+        <%= form_tag(product_create_product_comment_path(product_id: @product.id), method: :get) do %>
+          <%= hidden_field_tag(:user_id, value = current_user.id) if current_user %>
+          <%= text_area_tag :comment, nil, class: "form-control" %>
+          <div class="text-right">
+            <%= submit_tag "Оставить комментарий", class: "btn btn-primary", style: "margin-top: 10px; color: yellow;" %>
+          </div>
+        <% end %>
       </div>
     </div>
   </div>
   <div class="col-6">
-    <h1>
-      <div><%= @product.name %></div>
-      <div style="font-size: 15px"><%= @product.summary %></div>
-    </h1>
-    <div class="text-right" style="font-size: 2.5rem;"><%= @product.price %> грн.</div>
+    <div class="text-right" style="font-size: 0.7rem;">Индекс: <%= @product.id %></div>
+    <div class="text-center" style="font-size: 2.5rem;"><%= @product.price %> грн.</div>
     <% if @product.display %>
       <%= form_tag product_to_cart_carts_path, method: 'get', class: 'row', style: 'margin: 0', remote: true do %>
         <%= hidden_field_tag(:product_id, value = @product.id) %>
         <%= number_field_tag(:product_count, '1',min: 1, max: @product.quantity, class: "form-control col-2", style: "margin-right: 10px;") %>
-        <%= submit_tag("Добавить в корзину", class: "btn btn-primary col-auto") %>
+        <%= submit_tag("Добавить в корзину", class: "btn btn-primary col-auto", style: "color: yellow") %>
       <% end %>
     <% else %>
       <h4 style="color: red;">Нет в наличии</h4>
     <% end %>
-    <h2>Описание:</h2>
-    <div style="padding-left: 15px">
-      <%= @product.discription %>
-    </div>
   </div>
+</div>
+<div class="">
+  <h2>Описание:</h2>
+  <div style="padding-left: 15px">
+    <%= @product.discription %>
+  </div>  
 </div>
