--- a/app/views/application/main.html.erb
+++ b/app/views/application/main.html.erb
@@ -9,6 +9,10 @@
   }
 </style>
 
+<% content_for :head do %>
+  <title>Angar.kh.ua</title>
+<% end %>
+
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
