--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,3 +1,7 @@
+<% content_for :head do %>
+  <title><%= @category.name %> | Angar.kh.ua</title>
+<% end %>
+
 <h1><%= @category.name %></h1>
 
 <select id="product_filter_order" class="form-control" style="margin-bottom: 10px;">
